--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "fs": "0.0.1-security",
     "moment": "^2.29.1",
     "ms": "^2.1.3",
-    "os": "^0.1.2"
+    "os": "^0.1.2",
+    "quick.db": "^7.1.3"
   }
 }
